--- a/challenge.html
+++ b/challenge.html
@@ -6,10 +6,10 @@
     <title>change text</title>
 </head>
 <body>
-    <p id="myPargraphe">Original Text.</p>
+    <p id="myPargraphe">Text.</p>
 
     <script>
-        document.getElementById('myPargraphe').textContent = "hello,world!";
+        document.getElementById('myPargraphe').innerHTML = "hello,world!";
     </script>
 </body>
 </html>
